syntax = "proto3";

import "ItemService.proto";
import "LocationService.proto";

option java_package = "protos";
option csharp_namespace = "myGrpc";

package Protos;

message gItemLocation{
  gItem item = 1;
  gLocation location = 2;
  int32 id = 3;
  int32 amount = 4;
}

message gItemLocationList{
  repeated gItemLocation itemLocations = 1;
}


service ItemLocationService {

  rpc RegisterItemLocation(gItemLocation) returns (gItemLocation);
  rpc GetItemLocation(gItemLocation) returns (gItemLocation);
  rpc GetAllItemLocations(gItemLocation) returns (gItemLocationList);
  rpc UpdateItemLocation(gItemLocation) returns (gItemLocation);
  rpc RemoveItemLocation(gItemLocation) returns (gItemLocation);
  rpc GetByItemId(gItemLocation) returns (gItemLocationList);
  rpc GetByLocationId(gItemLocation) returns (gItemLocationList);

}

